Shader Node properties controlled by driver not updating when driver property is animated #73001

Closed
opened 2020-01-09 17:43:23 +01:00 by Tom Wilson · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-09 10:40, hash: 002f5b826c
(also not working in 2.81a)

Short description of error
I have a character with 2 eyes. I move the UV texture coordinates to move the irises around with the help of a driver.
On the mesh are 2 custom properties, eye_x and eye_y, these are driving the X and Y properties in the Mapping node.
When I manually change the eye_x and eye_y values, the 'Mapping' properties update, however, when I animate them and press play, the Mapping properties do not update.

Exact steps for others to reproduce the error
Open example blend.
Manually change the eye_x and eye_y property on the Mesh data and observe the mapping coordinates update correctly.
Now move playhead and observe no change in the mapping coordinates.

bug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2020-01-09 10:40, hash: `002f5b826c` (also not working in 2.81a) **Short description of error** I have a character with 2 eyes. I move the UV texture coordinates to move the irises around with the help of a driver. On the mesh are 2 custom properties, eye_x and eye_y, these are driving the X and Y properties in the Mapping node. When I manually change the eye_x and eye_y values, the 'Mapping' properties update, however, when I animate them and press play, the Mapping properties do not update. **Exact steps for others to reproduce the error** Open example blend. Manually change the eye_x and eye_y property on the Mesh data and observe the mapping coordinates update correctly. Now move playhead and observe no change in the mapping coordinates. [bug.blend](https://archive.blender.org/developer/F8267628/bug.blend)
Author

Added subscriber: @hedgehog90-3

Added subscriber: @hedgehog90-3
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Works correctly when the custom property is on the object [instead of the mesh]:
bug_corrected.blend

Looks like a bug to me.

Can confirm. Works correctly when the custom property is on the object [instead of the mesh]: [bug_corrected.blend](https://archive.blender.org/developer/F8268617/bug_corrected.blend) Looks like a bug to me.
Sybren A. Stüvel self-assigned this 2020-01-13 12:14:21 +01:00

Added subscriber: @MarcelLegindi

Added subscriber: @MarcelLegindi

This issue was referenced by 71d53ab465

This issue was referenced by 71d53ab4654c3abb9bd548b324f8c9ca34250a9b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.82 milestone 2023-02-08 16:41:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73001
No description provided.